--- a/about.html
+++ b/about.html
@@ -609,12 +609,12 @@
                   <!-- Binded items-->
                   <div class="binded-content">
                     <!-- Item-->
-                    <div class="binded-item active" id="author1"><img class="d-block rounded-circle mb-3" src="assets/img/team1.jpg" width="86" alt="Lilianna Bocouse">
+                    <div class="binded-item active" id="author1"><img class="d-block rounded-circle mb-3" src="assets/img/team/team1.jpg" width="86" alt="Lilianna Bocouse">
                       <h4 class="mb-0">xxx xxx</h4>
                       <p class="fs-lg text-muted mb-0">Head of Marketing</p>
                     </div>
                     <!-- Item-->
-                    <div class="binded-item" id="author2"><img class="d-block rounded-circle mb-3" src="assets/img/team1.jpg" width="86" alt="Darell Steward">
+                    <div class="binded-item" id="author2"><img class="d-block rounded-circle mb-3" src="assets/img/team/team1.jpg" width="86" alt="Darell Steward">
                       <h4 class="mb-0">xxx xxx</h4>
                       <p class="fs-lg text-muted mb-0">Project Manager</p>
                     </div>
