--- a/about.html
+++ b/about.html
@@ -609,17 +609,17 @@
                   <!-- Binded items-->
                   <div class="binded-content">
                     <!-- Item-->
-                    <div class="binded-item active" id="author1"><img class="d-block rounded-circle mb-3" src="assets/img/team/team1.jpg" width="86" alt="Lilianna Bocouse">
+                    <div class="binded-item active" id="author1"><img class="d-block rounded-circle mb-3" src="assets/img/team/team1.jpg" width="86" alt="Paul Mathew">
                       <h4 class="mb-0">Paul Mathew</h4>
                       <p class="fs-lg text-muted mb-0">Head of Marketing</p>
                     </div>
                     <!-- Item-->
-                    <div class="binded-item" id="author2"><img class="d-block rounded-circle mb-3" src="assets/img/team/team1.jpg" width="86" alt="Darell Steward">
-                      <h4 class="mb-0">Alex Robert/h4>
+                    <div class="binded-item" id="author2"><img class="d-block rounded-circle mb-3" src="assets/img/team/team1.jpg" width="86" alt="Alex Robert">
+                      <h4 class="mb-0">Alex Robert</h4>
                       <p class="fs-lg text-muted mb-0">Project Manager</p>
                     </div>
                     <!-- Item-->
-                    <div class="binded-item" id="author3"><img class="d-block rounded-circle mb-3" src="assets/img/team1.jpg" width="86" alt="Annette Black">
+                    <div class="binded-item" id="author3"><img class="d-block rounded-circle mb-3" src="assets/img/team/team1.jpg" width="86" alt="Julieth Steven">
                       <h4 class="mb-0">Julieth Steven</h4>
                       <p class="fs-lg text-muted mb-0">Mkurugenzi</p>
                     </div>
