--- a/404.html
+++ b/404.html
@@ -326,7 +326,7 @@
         <lottie-player class="d-none d-dark-mode-block mt-n5" src="assets/json/animation-404-dark.json" background="transparent.html" speed="1" loop autoplay></lottie-player>
         <div class="text-center pt-4 mt-lg-2">
           <h1 class="display-5">Page not found</h1>
-          <p class="fs-lg pb-2 pb-md-0 mb-4 mb-md-5">The page you are looking for was moved, removed or might never existed.</p><a class="btn btn-lg btn-primary" href="index.html">Go to homepage</a>
+          <p class="fs-lg pb-2 pb-md-0 mb-4 mb-md-5">The page you are looking for was moved or removed by Logix</p><a class="btn btn-lg btn-primary" href="index.html">Go to homepage</a>
         </div>
       </div>
     </main>
